[tool.poetry]
name = "motion_planning_scenes"
version = "0.1.2"
description = "Generic motion planning scenes, including goals and obstacles."
authors = ["Gijs Groote <gijsgroote@hotmail.com>", "Max Spahn <m.spahn@tudelft.nl>"]
packages = [
  { include = "motion_planning_scene_helpers" },
  { include = "motion_planning_goal" },
  { include = "motion_planning_env" },
]
  
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.19.0"
casadi = "3.5.6.pre2,^3.5.5"
PyYAML = "^6.0"
geomdl = "^5.3.1"
pyquaternion = "^0.9.9"
omegaconf = "^2.2.2"
pydantic = "^1.10.2"
pybullet = {version = "^3.2.3", optional = true}

[tool.poetry.extras]
bullet = ["pybullet"]

[tool.poetry.dev-dependencies]
pylint = "^2.12"
pytest = "^6.2.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
